feat: adding create freight

--- a/src/FreightManagement.Api/appsettings.Development.json
+++ b/src/FreightManagement.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Data Source=sqlhmg2.jet.com.br\\zapdev; Initial Catalog=dbZAPCommerce; User ID=JetZAPCommerce; Password=Z@PCommerce!@#!*; MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
